# friction-log-backend

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  analytics.py  crud.py  database.py  main.py  models.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py
