[project]
name = "friction-log-backend"
version = "0.1.0"
description = "Python FastAPI backend for Friction Log - tracks daily life friction"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "nytomi90", email = "noreply@github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | contract
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
extend_skip = ["contract"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["contract"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "contract/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
